2009-04-12  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/language-specs/verilog.lang:
	Add some missing keywords. Bug #577892, patch by Ben James.

2009-03-18  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/prolog.lang:
	Add "consult" word and minor fix highlighting variables.

=== gtksourceview 2.6.0 ===

2009-03-15  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.6.0

2009-03-13  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/language-specs/octave.lang: use % for
	code comments since matlab does not like #.

2009-03-03  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/prolog.lang:
	* gtksourceview/language-specs/Makefile.am:
	* gtksourceview/language-specs/testfiles.sh:
	Add prolog lang file.

=== gtksourceview 2.5.6 ===

2009-03-02  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.5.6

2009-02-26  Jesse van den Kieboom  <jesse@icecrew.nl>

	* gtksourceview/language-specs/po.lang: added
	text/x-gettext-translation-template mime type

2009-02-26  Thomas H.P. Andersen  <phomes@gmail.com>

	* tests/test-widget.c: Replace deprecated gtk symbol. Bug #572085

2009-02-25  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/gtksourcemark.c: chain up finalize.

=== gtksourceview 2.5.5 ===

2009-02-15  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.5.5

2009-02-10  Johannes Schmid  <jhs@gnome.org>

	* gtksourceview/gtksourceview.c (update_current_line_color):
	#570492 – Canot open editor - crash

2009-02-05  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/cobalt.xml:
	Mark strings for translation.

2009-02-04  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/cobalt.xml:
	* gtksourceview/language-specs/Makefile.am:
	Add new blue based style. Thanks to Will Farrington.
